--- a/index.html
+++ b/index.html
@@ -25,6 +25,51 @@
    </head>
    <body>
       <button onclick="topFunction()" id="toTop" title="Go to top">Top</button>
+
+      <div id="login" class="modal">
+         <form class="modal-content animate" >
+            <div class="imgcontainer">
+               <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
+            </div>
+            <div class="login-form">
+               <label><b>Username</b></label>
+               <input class="login-input" type="text" placeholder="Enter Username" name="uname" required>
+               <label><b>Password</b></label>
+               <input class="login-input" type="password" placeholder="Enter Password" name="psw" required>
+        
+               <button class="loginbtn" type="submit">Login</button>
+               <input type="checkbox" checked="checked"> Remember me
+            </div>
+
+            <div class="login-form" style="background-color:#f1f1f1">
+               <span class="psw"><a href="#">Forgot password?</a></span>
+            </div>
+         </form>
+      </div>
+
+      <div id="signup" class="modal">
+         <span onclick="document.getElementById('signup').style.display='none'" class="close" title="Close Modal">×</span>
+         <form class="modal-content animate">
+            <div class="imgcontainer">
+               <span onclick="document.getElementById('signup').style.display='none'" class="close" title="Close Modal">&times;</span>
+            </div>
+            <div class="login-form">
+               <label><b>Email</b></label>
+               <input class="login-input" type="text" placeholder="Enter Email" name="email" required>
+
+               <label><b>Password</b></label>
+               <input class="login-input" type="password" placeholder="Enter Password" name="psw" required>
+
+               <label><b>Repeat Password</b></label>
+               <input class="login-input" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+               <input type="checkbox" checked="checked"> Remember me
+               <p>By creating an account you agree to our <a href="#"> Terms and Privacy</a>.</p>
+               <div class="clearfix">
+                  <button type="submit" class="loginbtn">Sign Up</button>
+               </div>
+            </div>
+         </form>
+      </div>
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
          <div class="container-fluid">
             <div class="navbar-header">
@@ -41,6 +86,8 @@
                      <input type="text" class="form-control" placeholder="Search">
                   </div>
                   <button type="submit" class="btn btn-default" onclick="getLatLng()">Search</button>
+                  <button class="btn btn-default" onclick="document.getElementById('login').style.display='block'" >Login</button>
+                  <button class="btn btn-default" onclick="document.getElementById('signup').style.display='block'" style="width:auto;">Sign Up</button>
                </form>
                <ul class="nav navbar-nav">
                   <li class="active" id="home"><a href="#" onclick="initMap()">Home</a></li>
