--- a/public/index.html
+++ b/public/index.html
@@ -239,9 +239,10 @@
                <h1>Your opinion</h1>
                <form action="/comment" method="POST">
                   <div class="form-group">
-                     
+                     <label for="userID">userID:</label>
+                     <textarea class="form-control" name="userID" type="text"  id="userID" placeholder="What do you think"></textarea>
                      <label for="comment">Comment:</label>
-                     <textarea class="form-control" name="userID" type="text" rows="5" id="comment" placeholder="What do you think"></textarea>
+                     <textarea class="form-control" name="reviews" type="text" rows="5" id="comment" placeholder="What do you think"></textarea>
                      <br>
                      <h2>Overall rating</h2>
                   
@@ -251,16 +252,16 @@
                <input type="radio" name="l" value="1">Very bad
                </label>
                <label class="radio-inline">
-               <input type="radio" name="reviews" value="2">Bad
+               <input type="radio" name="rate" value="2">Bad
                </label>
                <label class="radio-inline">
-               <input type="radio" name="reviews" value="3">Average
+               <input type="radio" name="rate" value="3">Average
                </label>
                <label class="radio-inline">
-               <input type="radio" name="reviews" value="4">Good
+               <input type="radio" name="rate" value="4">Good
                </label>
                <label class="radio-inline">
-               <input type="radio" name="reviews" value="5">Excellent
+               <input type="radio" name="rate" value="5">Excellent
                </label>
                </form>
                <br>
